[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/communications.png" type="Texture" id=1]
[ext_resource path="res://shared/ship_subsystems/communications.gd" type="Script" id=2]
[ext_resource path="res://shared/ship_subsystems/chair.tscn" type="PackedScene" id=3]

[sub_resource type="Theme" id=1]
Button/styles/ = null

[node name="communications" type="Node2D"]
script = ExtResource( 2 )

[node name="console" type="Node2D" parent="."]
z_index = 2048

[node name="PanelContainer" type="PanelContainer" parent="console"]
margin_left = -257.0
margin_top = -161.0
margin_right = -9.0
margin_bottom = -37.0
rect_pivot_offset = Vector2( 379, 260 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_vbox" type="VBoxContainer" parent="console/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 90.0
margin_bottom = 43.0
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="ship_name" type="Label" parent="console/PanelContainer/left_vbox"]
margin_right = 80.0
margin_bottom = 13.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "my cool ship name"

[node name="request_mission" type="Button" parent="console/PanelContainer/left_vbox"]
margin_top = 17.0
margin_right = 83.0
margin_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "REQUEST MISSION"

[node name="ScrollContainer" type="ScrollContainer" parent="console/PanelContainer"]
margin_left = 212.0
margin_top = 7.0
margin_right = 241.0
margin_bottom = 117.0
size_flags_horizontal = 8
theme = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="console/PanelContainer/ScrollContainer"]
margin_right = 17.0
margin_bottom = 438.0
alignment = 1

[node name="Label" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_right = 17.0
margin_bottom = 13.0
text = "TEST"

[node name="Label2" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 17.0
margin_bottom = 30.0
text = "TEST"

[node name="Label3" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 17.0
margin_bottom = 47.0
text = "TEST"

[node name="Label4" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 17.0
margin_bottom = 64.0
text = "TEST"

[node name="Label5" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 17.0
margin_bottom = 81.0
text = "TEST"

[node name="Label6" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 17.0
margin_bottom = 98.0
text = "TEST"

[node name="Label7" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 17.0
margin_bottom = 115.0
text = "TEST"

[node name="Label8" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 17.0
margin_bottom = 132.0
text = "TEST"

[node name="Label9" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 17.0
margin_bottom = 149.0
text = "TEST"

[node name="Label10" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 17.0
margin_bottom = 166.0
text = "TEST"

[node name="Label11" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 17.0
margin_bottom = 183.0
text = "TEST"

[node name="Label12" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 187.0
margin_right = 17.0
margin_bottom = 200.0
text = "TEST"

[node name="Label13" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 17.0
margin_bottom = 217.0
text = "TEST"

[node name="Label14" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 221.0
margin_right = 17.0
margin_bottom = 234.0
text = "TEST"

[node name="Label15" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 17.0
margin_bottom = 251.0
text = "TEST"

[node name="Label16" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 255.0
margin_right = 17.0
margin_bottom = 268.0
text = "TEST"

[node name="Label17" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 17.0
margin_bottom = 285.0
text = "TEST"

[node name="Label18" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 289.0
margin_right = 17.0
margin_bottom = 302.0
text = "TEST"

[node name="Label19" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 306.0
margin_right = 17.0
margin_bottom = 319.0
text = "TEST"

[node name="Label20" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 323.0
margin_right = 17.0
margin_bottom = 336.0
text = "TEST"

[node name="Label21" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 17.0
margin_bottom = 353.0
text = "TEST"

[node name="Label22" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 357.0
margin_right = 17.0
margin_bottom = 370.0
text = "TEST"

[node name="Label23" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 374.0
margin_right = 17.0
margin_bottom = 387.0
text = "TEST"

[node name="Label24" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 391.0
margin_right = 17.0
margin_bottom = 404.0
text = "TEST"

[node name="Label25" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 408.0
margin_right = 17.0
margin_bottom = 421.0
text = "TEST"

[node name="Label26" type="Label" parent="console/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 425.0
margin_right = 17.0
margin_bottom = 438.0
text = "TEST"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -23.008 )
texture = ExtResource( 1 )

[node name="chair" parent="." instance=ExtResource( 3 )]
